--- a/slides/history.html
+++ b/slides/history.html
@@ -15,7 +15,7 @@
   <img src="img/facebook_msg.png" alt="" height="250px">
   <h2>&nbsp;</h2>
   <ul>
-      <li>Publié en tant que projet open source en juillet 2008</li>
-      <li>Il rentre en tant que projet Apache Incubator en Mars 2009</li>
+      <li>Projet open source en juillet 2008</li>
+      <li>Projet Apache Incubator en Mars 2009</li>
   </ul>
 </section>
