Rajout de l'alignement à gauche sur la slide cluster

--- a/slides/illustration_cluster.html
+++ b/slides/illustration_cluster.html
@@ -1,4 +1,4 @@
 <img src="img/illustration_cluster.png" alt="Cluster illustration" class="image-right">
-<p>Un noeud est responsable de la donnée dans la région du cercle entre lui même (inclus) et son prédécesseur (exclus)</p>
-<p>Le dernier noeud est le prédécesseur du premier (permettant de former le fameux cercle à droite)</p>
-<p>Par exemple : le noeud avec le token 25 sera responsable de la donnée qui possède une partition key hash à 12</p>
+<p align="left">Un noeud est responsable de la donnée dans la région du cercle entre lui même (inclus) et son prédécesseur (exclus)</p>
+<p align="left">Le dernier noeud est le prédécesseur du premier (permettant de former le fameux cercle à droite)</p>
+<p align="left">Par exemple : le noeud avec le token 25 sera responsable de la donnée qui possède une partition key hash à 12</p>
