MAJ de l'agenda et du json lié

--- a/slides/agenda.html
+++ b/slides/agenda.html
@@ -1,9 +1,11 @@
 <h1>Agenda</h1>
 
 <ul>
+  <li>Introduction</li>
   <li>Un peu d'histoire</li>
-  <li>Qui l'utilise et pourquoi?</li>
-  <li>Comment cela fonctionne?</li>
+  <li>Qui l'utilise ?</li>
+  <li>Comment cela fonctionne? Zoom sur un cluster</li>
+  <li>Comment cela fonctionne? Zoom sur la réplication</li>
   <li>Le CQL (Cassandra Query Language)</li>
   <li>Des questions?</li>
 </ul>
