Mise à jour de l'agenda 	modified:   slides/agenda.html

--- a/slides/agenda.html
+++ b/slides/agenda.html
@@ -4,8 +4,12 @@
   <li>Introduction</li>
   <li>Un peu d'histoire</li>
   <li>Qui l'utilise ?</li>
-  <li>Comment cela fonctionne? Zoom sur un cluster</li>
-  <li>Comment cela fonctionne? Zoom sur la réplication</li>
-  <li>Le CQL (Cassandra Query Language)</li>
+  <li>Comment cela fonctionne?</li>
   <li>Des questions?</li>
 </ul>
+<aside class="notes">
+<h3>Comment cela fonctionne?</h3>
+<li>Clustering...</li>
+<li>Réplication</li>
+<li>CQL</li>
+</aside>
