--- a/slides/introduction.html
+++ b/slides/introduction.html
@@ -9,5 +9,13 @@
   <img src="img/graphCassandra.jpg"/>
 </section>
 
+<section>
+  <h3>Cassandra en quelques points ..</h3>
+  <p>CQL (Cassandra Query Language), offre une perception semblable au SQL :</p>
+  <ul>
+    <li>Une représentation des données familière en colonnes-lignes</li>
+    <li>Beaucoup plus intuitif que l'interface basé sur Thrift</li>
+  </ul>
+</section>
 
 
