Revue de l'agencement des slides et typologie

--- a/slides/cql_examples.html
+++ b/slides/cql_examples.html
@@ -1,6 +1,19 @@
 <section>
-  <h2 style="color:#6c7ee4;">CQL, <span class="neutral">C</span>assandra <span class="neutral">Q</span>uery <span class="neutral">L</span>anguage</h2>
-<code>CREATE TABLE t (k int PRIMARY KEY, other text)</code><br/><br/>
-<code>CREATE TRIGGER myTrigger ON myTable USING 'org.apache.cassandra.triggers.InvertedIndex';</code><br/><br/>
-<code>UPDATE UserActions SET total = total + 2 WHERE user = B70DE1D0-9908-4AE3-BE34-5573E5B09F14 AND action = 'click';</code>
+    <h2>CQL, <span class="neutral">C</span>assandra <span class="neutral">Q</span>uery <span class="neutral">L</span>anguage</h2>
+    <p>&nbsp;</p>
+    <ul>
+        <li>Offre une perception semblable au SQL</li>
+        <li>Une représentation des données familières en colonnes-lignes</li>
+        <li>Beaucoup plus intuitif que l'interface basé sur Thrift</li>
+    </ul>
+</section>
+<section>
+    <h2>Un petit exemple...</h2>
+    <p>&nbsp;</p>
+    <pre><code>
+CREATE TABLE t (k int PRIMARY KEY, other text)
+CREATE TRIGGER myTrigger ON myTable USING 'org.apache.cassandra.triggers.InvertedIndex';
+UPDATE UserActions SET total = total + 2 WHERE user = B70DE1D0-9908-4AE3-BE34-5573E5B09F14 AND action = 'click';
+    </code></pre>
+    <p>&nbsp;</p>
 </section>
