--- a/slides/history.html
+++ b/slides/history.html
@@ -1,21 +1,21 @@
 <section>
-  <h2 style="color:#6c7ee4;">Histoire de Cassandra</h2>
+    <h1 style="color:#6c7ee4;">Histoire de Cassandra</h1>
 </section>
 
 <section>
-  <h2>Initié en 2008 par <span class="neutral">Avinash Lakshman </span>
+    <h2>Initié en 2008 par <span class="neutral">Avinash Lakshman </span>
    (Amazon Dynamo) et <span class="neutral">Prashant Malik</span> chez <strong>Facebook</strong></h2>
-  <h2>&nbsp;</h2>
-  <img src="img/avinash_lakshman.jpg" alt="" height="250px">
-  <img src="img/prashant_malik.png" alt="" height="250px">
+    <h2>&nbsp;</h2>
+    <img src="img/avinash_lakshman.jpg" alt="" height="250px">
+    <img src="img/prashant_malik.png" alt="" height="250px">
 </section>
 
 <section>
-  <h2>Créé à la base pour<span class="neutral">améliorer la recherche de messages</span> facebook</h2>
-  <img src="img/facebook_msg.png" alt="" height="250px">
-  <h2>&nbsp;</h2>
-  <ul>
-      <li>Projet open source en juillet 2008</li>
-      <li>Projet Apache Incubator en Mars 2009</li>
-  </ul>
+    <img class="raw" src="img/history.png" width="80%" height="80%">
+    <aside class="notes">
+        <ul>
+            <li>Facebook : Créé à la base pour améliorer la recherche de messages</li>
+            <li>Projet open source en juillet 2008</li>
+            <li>Projet Apache Incubator en Mars 2009</li>
+    </aside>
 </section>
