--- a/slides/introduction.html
+++ b/slides/introduction.html
@@ -1,21 +1,10 @@
 <section>
-  <h3>Cassandra en quelques points ..</h3>
-  <p>Une base massive NOSQL avec comme points forts :</p>
-  <ul>
-    <li>Très performante et élastique (la scalabilité est linéaire)</li>
-    <li>Décentralisé, et une bonne tolérance aux pannes</li>
-    <li>Gratuit et open source</li>
-  </ul>
-  <img src="img/graphCassandra.jpg"/>
+    <h2>Cassandra en quelques points ..</h2>
+    <ul>
+        <li>Une base NoSql</li>
+        <li>Très performante et élastique (la scalabilité est linéaire)</li>
+        <li>Décentralisé, et une bonne tolérance aux pannes (Pas de Single Point Of Failure)</li>
+        <li>Gratuit et open source</li>
+    </ul>
+    <img src="img/graphCassandra.jpg" width="60%" height="60%">
 </section>
-
-<section>
-  <h3>Cassandra en quelques points ..</h3>
-  <p>CQL (Cassandra Query Language), offre une perception semblable au SQL :</p>
-  <ul>
-    <li>Une représentation des données familière en colonnes-lignes</li>
-    <li>Beaucoup plus intuitif que l'interface basé sur Thrift</li>
-  </ul>
-</section>
-
-
