--- a/slides/usages.html
+++ b/slides/usages.html
@@ -1,13 +1,19 @@
 <section>
-  <h3>C'est utilisé chez qui ?</h3>
-  <img class="raw" src="img/SoundCloud.png" alt="SoundCloud" height="50px">
-  <img class="raw" src="img/spotify.png" alt="Spotify" height="50px">
-  <img class="raw" src="img/comcast.png" alt="Comcast" height="50px">
-  <img class="raw" src="img/ebay.png" alt="Ebay" height="50px">
-  <img class="raw" src="img/instagram.png" alt="instagram" height="50px">
-  <img class="raw" src="img/NASA.png" alt="NASA" height="50px">
-  <img class="raw" src="img/reddit.png" alt="Reddit" height="50px">
-  <img class="raw" src="img/nextgate.png" alt="Nextgate" height="50px">
-  <p>http://planetcassandra.org/apache-cassandra-use-cases/</p>
+  <h2>Cassandra (entre autres) est utilisé par ...</h2>
+  <ul>
+    <li>http://planetcassandra.org/apache-cassandra-use-cases/</li>
+  </ul>
+  <h2>&nbsp;</h2>
+  <img class="raw" src="img/SoundCloud.png" alt="SoundCloud" height="70px">
+  <img class="raw" src="img/spotify.png" alt="Spotify" height="70px">
+  <img class="raw" src="img/comcast.png" alt="Comcast" height="70px">
+  <img class="raw" src="img/ebay.png" alt="Ebay" height="70px">
+  <img class="raw" src="img/instagram.png" alt="instagram" height="70px">
+  <img class="raw" src="img/NASA.png" alt="NASA" height="70px">
+  <img class="raw" src="img/reddit.png" alt="Reddit" height="70px">
+  <img class="raw" src="img/nextgate.png" alt="Nextgate" height="70px">
+  <img class="raw" src="img/twitter.png" alt="Twitter" height="70px">
+  <h4>et</h4>
+  <img class="raw" src="img/netflix.jpg" alt="Twitter" height="100px">
 </section>
 
