--- a/slides/agenda.html
+++ b/slides/agenda.html
@@ -1,15 +1,14 @@
 <h1>Agenda</h1>
-
 <ul>
-  <li>Introduction</li>
-  <li>Un peu d'histoire</li>
-  <li>Qui l'utilise ?</li>
-  <li>Comment cela fonctionne?</li>
-  <li>Des questions?</li>
+    <li>Introduction</li>
+    <li>Un peu d'histoire</li>
+    <li>Qui l'utilise ?</li>
+    <li>Architecture</li>
+    <li>Des questions?</li>
 </ul>
 <aside class="notes">
-<h3>Comment cela fonctionne?</h3>
-<li>Clustering...</li>
-<li>Réplication</li>
-<li>CQL</li>
+    <h3>Architecture</h3>
+    <li>Clustering...</li>
+    <li>Réplication</li>
+    <li>CQL</li>
 </aside>
