ajout notes intro

--- a/slides/introduction.html
+++ b/slides/introduction.html
@@ -6,6 +6,13 @@
     <li>Décentralisé, et une bonne tolérance aux pannes</li>
     <li>Gratuit et open source</li>
   </ul>
+  <aside class="notes">
+        <ul>
+            <li>permet de gérer des quantités massives de données réparties sur plusieurs serveurs (clusters)</li>
+            <li>Adoptée rapidement par de grandes entreprises comme twitter, nous y reviendrons plus tard</li>
+            <li>8eme place dans terme de ranking sur db-engines.com devant Redis</li>
+        </ul>
+    </aside>
   <img src="img/graphCassandra.jpg"/>
 </section>
 
