Correction user github antoine

--- a/slides/credits.html
+++ b/slides/credits.html
@@ -6,4 +6,4 @@
 <h3 class="icon-github-circled neutral">elebeaup</h3>
 <p>&nbsp;</p>
 <h3>Antoine Choimet</h3>
-<h3 class="icon-github-circled neutral">antoinechoimet</h3>
+<h3 class="icon-github-circled neutral">achoimet</h3>
