--- a/slides/write_path.html
+++ b/slides/write_path.html
@@ -17,3 +17,26 @@
         </ul>
     </aside>
 </section>
+<section>
+<h2>Memtables et SSTables</h2>
+<p><strong>Les memtables sont organisées par partition key</p></strong>
+<ul>
+    <li>Il y a une memtable par table par noeud</li>
+    <li>Les updates sur les valeurs de colonnes dans la memtable écrasent les valeurs existantes</li>
+    <li>L'accès à ces données est très rapide puisqu'elles sont en mémoire</li>
+    <li>Les updates sont aussi mergées en mémoire pour une partition key donnée.</li>
+</ul>
+</section>
+<section>
+<p><strong>Les memtables sont toujours flushées vers les SSTables (Sorted String Tables) sur le disque</strong></p>
+<ul>
+    <li>Pour ne pas prendre trop de place en mémoire</li>
+    <li>Flushées en utilisant une lecture/écriture séquentielle pour plus de rapidité</li>
+    <li>Les SSTables sont immuables une fois écrites sur le disque</li>
+</ul>
+<p>&nbsp;</p>
+<p><strong>Les updates sur une donnée déjà existante d'une SSTable vont dans une memtable, puis dans une SSTable différente</p></strong>
+<ul>
+    <li>Pour que la donnée pour une partition key donnée puisse être dans plusieurs endroits différents</li>
+</ul>
+</section>
