--- a/slides/vocabulaire.html
+++ b/slides/vocabulaire.html
@@ -23,7 +23,7 @@
         <ul>
             <li>Primary Key : Partition Key + (optionnel) Clustering Key</li>
             <li>Partition Key/Row Key: responsable de la distribution à travers les différents noeuds</li>
-            <li>Clustering Key : responsable de la répartition/ordre des données dans la paritition
+            <li>Clustering Key : responsable de la répartition/ordre des données dans la paritition</li>
             <li>Composite Key : plusieurs colonnes au niveau de la clé. (Séparé par des : au niveau de la représentation physique)</li>
             <li>Skinny Rows : Primary Key contient seulement une Partition Key</li>
             <li>Wide Rows : Primary Key contient des colonnes (Clustering Key) en plus de la parition key</li>
